Fix issues:
#1 Strict Standards: Non-static method VC_Fonts::vc_theme_google_font_variants()
#2 Custom Logo: missing title attribute
#3 Rename "Secondary Menu" to "Footer Menu"
#4 Animations on hover missing
#5 Meta icons are not aligned vertically with text
#6 "Reply" to comment shouldn't reload the post page
#7 Unordered list bullet color

--- a/backend/visual-composer-theme/less/responsive.less
+++ b/backend/visual-composer-theme/less/responsive.less
@@ -181,7 +181,7 @@
 				margin-left: 100px;
 			}
 
-			ol {
+			ol.children {
 				margin-left: 100px;
 			}
 		}
